chore: remove password from app
